--- a/sm-server/CMakeLists.txt
+++ b/sm-server/CMakeLists.txt
@@ -10,6 +10,9 @@ find_package(Pistache 0.0.2 REQUIRED)
 add_executable(sm-server main.cpp)
 target_link_libraries(${PROJECT_NAME} pistache_shared)
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/userjson.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
