Instalar RapidJSON desde source

--- a/sm-server/CMakeLists.txt
+++ b/sm-server/CMakeLists.txt
@@ -6,19 +6,25 @@ enable_testing()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -lwiringPi")
 
 # Find the Pistache library.
-find_package(Pistache 0.0.2 REQUIRED PATHS /opt/pistache)
+find_package(PkgConfig)
+pkg_check_modules(Pistache REQUIRED IMPORTED_TARGET libpistache)
+
+# Find the RapidJSON library.
+find_package(RapidJSON REQUIRED PATHS /opt/rapidjson)
+include_directories(${RAPIDJSON_INCLUDE_DIRS})
 
 # Find the SmartHouse library
-# find_package(smarthouse REQUIRED PATHS /opt/smarthouse)
+find_package(smarthouse REQUIRED PATHS /opt/smarthouse)
 INCLUDE_DIRECTORIES(/opt/smarthouse/include)
 LINK_DIRECTORIES(/opt/smarthouse/lib)
 
 # Find the Boost library
-find_package(Boost 1.71.0 COMPONENTS program_options REQUIRED PATHS /opt/boost)
+find_package(Boost REQUIRED)
 include_directories( ${Boost_INCLUDE_DIR} )
 
 add_executable(sm-server main.cpp)
-target_link_libraries(${PROJECT_NAME} pistache_shared smarthouse) 
+target_link_libraries(${PROJECT_NAME} smarthouse) 
+target_link_libraries(${PROJECT_NAME} PkgConfig::Pistache)
 target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
