Funcional con la version de pistache 0.0.2

--- a/sm-server/CMakeLists.txt
+++ b/sm-server/CMakeLists.txt
@@ -3,9 +3,10 @@ project(sm-server VERSION 0.1.0)
 
 include(CTest)
 enable_testing()
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -lwiringPi")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lpthread -lwiringPi")
 
 # Find the Pistache library.
+set(Pistache_FOUND 1)
 find_package(Pistache 0.0.2 REQUIRED PATHS /opt/pistache)
 
 # Find the SmartHouse library
