--- a/sm-gpio/src/Makefile.am
+++ b/sm-gpio/src/Makefile.am
@@ -1,4 +1,4 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include
 bin_PROGRAMS = sm-gpio
-smarthouse_SOURCES = main.c
-smarthouse_LDADD = $(top_builddir)/lib/libsm-gpio.la -lpthread
+libsm-gpio_SOURCES = main.c
+libsm-gpio_LDADD = $(top_builddir)/lib/libsm-gpio.la -lpthread
