--- a/sm-gpio/configure.ac
+++ b/sm-gpio/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([libsm-gpio], [1.0], [arturocv16@gmail.com])
+AC_INIT([libsmgpio], [1.0], [arturocv16@gmail.com])
 AC_CONFIG_AUX_DIR([build-aux])
 AC_CONFIG_MACRO_DIR([m4])
 AM_INIT_AUTOMAKE([foreign -Wall -Werror])
