--- a/sm-library/lib/Makefile.am
+++ b/sm-library/lib/Makefile.am
@@ -1,4 +1,4 @@
 lib_LTLIBRARIES = libsmarthouse.la
 include_HEADERS = $(top_srcdir)/include/smarthouse.h
-AM_CPPFLAGS = -I$(top_srcdir)/include -lpthread -lwiringPi
+AM_CPPFLAGS = -I$(top_srcdir)/include -lpthread -lsmgpio
 libsmarthouse_la_SOURCES = smarthouse.c
